src/main/java/com/example/WeatherSensor/util/errors/sensor/SensorAlreadyExistsException.java
package com.example.WeatherSensor.util.errors.sensor;

public class SensorAlreadyExistsException extends RuntimeException{
}
